--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #060b26;
+  background-color: transparent;
   height: 80px;
   display: flex;
   justify-content: start;
@@ -20,6 +20,7 @@
   justify-content: center;
   position: fixed;
   top: 0;
+  z-index: 1000;
   left: -100%;
   transition: 850ms;
 }
