--- a/src/style/customstyle.css
+++ b/src/style/customstyle.css
@@ -1,3 +1,29 @@
+.highlight{
+    padding: 10px ;
+    box-shadow: 0px 0px 10px 2px rgb(0 0 0 / 40%) !important;
+    margin: 20px auto;
+}
+input,select,textarea{
+    margin: 5px auto;
+}
+.add_success{
+    border: 1px solid;
+    border-radius: 50px;
+    padding: 4px;
+    background: green;
+    color: white;
+    margin: 5px;
+    cursor:pointer;
+}
+.remove_danger{
+    border: 1px solid;
+    border-radius: 50px;
+    padding: 4px;
+    background: red;
+    color: white;
+    margin: 5px;
+    cursor: pointer;
+}
 body{
     background: #f4f7fa;
 }
