--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: transparent;
+  background-color: #060b26;
   height: 80px;
   display: flex;
   justify-content: start;
