--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #060b26;
+  background: linear-gradient(to left, rgb(0, 121, 145), rgb(110 173 154));
   height: 80px;
   display: flex;
   justify-content: start;
@@ -13,7 +13,7 @@
 }
 
 .nav-menu {
-  background-color: #060b26;
+  background: linear-gradient(to right, rgb(0, 121, 145), rgb(110 173 154));
   width: 250px;
   height: 100vh;
   display: flex;
@@ -60,7 +60,7 @@
 }
 
 .navbar-toggle {
-  background-color: #060b26;
+  background:linear-gradient(to right, rgb(0, 121, 145), rgb(110 173 154));
   width: 100%;
   height: 80px;
   display: flex;
