--- a/src/style/customstyle.css
+++ b/src/style/customstyle.css
@@ -1,3 +1,7 @@
+.modal-content{
+    padding: 50px;
+}
+
 .highlight{
     padding: 10px ;
     box-shadow: 0px 0px 10px 2px rgb(0 0 0 / 40%) !important;
