--- a/src/style/customstyle.css
+++ b/src/style/customstyle.css
@@ -1,7 +1,14 @@
 .modal-content{
     padding: 50px;
 }
-
+.unclock_login:before{
+    background: linear-gradient(-135deg,#1de9b6 0%,#1dc4e9 100%);
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 30px;
+}
 .highlight{
     padding: 10px ;
     box-shadow: 0px 0px 10px 2px rgb(0 0 0 / 40%) !important;
