--- a/src/style/customstyle.css
+++ b/src/style/customstyle.css
@@ -1,6 +1,20 @@
 .modal-content{
     padding: 50px;
 }
+
+input.form-control{
+border: none;
+border-bottom: 1px solid #1dd8ce;
+border-radius: 0;
+}
+.form-control:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: none;
+}
+
 .unclock_login:before{
     background: linear-gradient(-135deg,#1de9b6 0%,#1dc4e9 100%);
     background-clip: text;
