--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-  background: linear-gradient(to left, rgb(0, 121, 145), rgb(110 173 154));
+  background: #3f4d67;
+  /* background: linear-gradient(to left, rgb(0, 121, 145), rgb(110 173 154)); */
   height: 80px;
   display: flex;
   justify-content: start;
@@ -42,7 +43,7 @@
 .nav-text a {
   text-decoration: none;
   color: #f5f5f5;
-  font-size: 18px;
+  font-size: 14px;
   width: 95%;
   height: 100%;
   display: flex;
